--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <link rel="shortcut icon" href="img/3249937.png">
             <link rel="stylesheet" href="css/style.css">
             <title> Home - Matias Orciani.com </title>
+            <meta name="description" content="Matias Augusto Orciani is a photographer born in Buenos Aires based in Copenhagen, he finished his studies at the Escuela de Fotogria Creativa and Escuela Argentina de Fotografia in 2021.">
+            <meta name="keywords"  content="PHOTOGRAPHY, PHOTOGRAPHER, STREETPHOTOGRAPHY, WORK, SOCIAL, ART">
 </head>
 <body>
     <header id="header-menu" class="header-menu">
