--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             </div><!--Fin de Fotografias de Trabajo en tienda comerial-->
             <br>
         </section>
+    </main>
     <footer>
         <div class="div-footer">
             <h4 class="footer-contact-text">I am oalso on: </4h> 
