Eliminacion de br y otro arreglos

--- a/index.html
+++ b/index.html
@@ -51,13 +51,9 @@
     </header>
     <main> <!--Comienza el contenido de la Landing Page-->
         <img class="imagenportada" src="img/1-Portada-Mujer-corriendo.jpg" alt="mujer-corriendo-copenhagen"> <!--Imagen de Portada-->
-        <br>
-        <br>
-        <br>
-        <br>
         <section class="section-bio">
-            <h2 id="about-me" class="about-me"> About me </h2> 
             <div class="div-bio">
+                <h2 id="about-me" class="about-me"> About me </h2>
                 <nav class="nav-bio">
                     <img class="imagen-bio" src="img/1-About-me.jpg" alt="Retrato-Matias-Orciani">
                     <div class="div-text-bio">
@@ -70,15 +66,9 @@
                     </div>
                 </nav>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-        </section>> 
+        </section>
         <section class="section-galeria" id="gallery">
-            <br>
             <h2 class="h2-galeria">Gallery</h2>
-            <br>
             <div class="div-galeria"section-gallery>
                 <img class="img-galeria" src="img/Gallery-1.jpg" alt="copenhaguen-bike-street">
                 <img class="img-galeria" src="img/Gallery-2.jpg" alt="copenhaguen-bike-street">
@@ -90,28 +80,18 @@
                 <img class="img-galeria" src="img/Gallery-8.JPG" alt="copenhaguen-bike-street">
                 <img class="img-galeria" src="img/Gallery-9.JPG" alt="copenhaguen-bike-street">
             </div>
-            <br> 
-            <br>
-            <br>
-            <br>
         </section>
         <section class="section-works-a"> <!--Comienza la sección de Works-->
-            <br>
             <h2 id="works">Works</h2> <!--Comienza la sección de Works-->
-            <br>
             <h3 class="h3-works-a">Social Events</h3>
-            <br>
             <div class="div-works-a">
                 <img class="img-works-a" src="img/work-a-1.jpg" alt="Event-photography-family"> <!--Fotografias de trabajo en evento social-->
                 <img class="img-works-a" src="img/work-a-2.jpg" alt="Event-photography-family">
                 <img class="img-works-a" src="img/work-a-3.jpg" alt="Event-photography-family">
             </div><!--Fin de Fotografias de trabajo en evento social-->
-            <br>
-            <br>
         </section>
         <section class="section-works-b">
             <h3 class="h3-works-b">Others</h3>
-            <br>
             <div class="div-works-b"><!--Fotografias de Trabajo en tienda comercial-->
                 <img class="img-works-b" src="img/work-b-4.jpg" alt="fashon-clothes">
                 <img class="img-works-b" src="img/work-b-5.jpg" alt="fashon-clothes">
@@ -120,14 +100,15 @@
                 <img class="img-works-b" src="img/work-b-2.jpg" alt="fashon-clothes"> 
                 <img class="img-works-b" src="img/work-b-6.jpg" alt="fashon-clothes"> 
             </div><!--Fin de Fotografias de Trabajo en tienda comerial-->
-            <br>
         </section>
     </main>
     <footer>
+        <section class="section-footer">
         <div class="div-footer">
             <h4 class="footer-contact-text">I am oalso on: </4h> 
             <a href="https://www.instagram.com/matias_orciani/?hl=es" target="_blank" class="instagram-contact"><p>Instagram</p></a>
             </div>
+        </section>
     </footer>
      <!--Codigo de Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
