Correcciones en responsive y valores

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </header>
     <main> <!--Comienza el contenido de la Landing Page-->
-        <img class="imagenportada" src="img/1-Portada-Mujer-corriendo.jpg" alt="mujer-corriendo-copenhagen"> <!--Imagen de Portada-->
+        <img class="imagenportada" src="img/1-Portada-Mujer-corriendo-cut.jpg" alt="mujer-corriendo-copenhagen"> <!--Imagen de Portada-->
         <section class="section-bio">
             <div class="div-bio">
                 <h2 id="about-me" class="about-me"> About me </h2>
@@ -105,7 +105,7 @@
     <footer>
         <section class="section-footer">
         <div class="div-footer">
-            <h4 class="footer-contact-text">I am oalso on: </4h> 
+            <h4 class="footer-contact-text">I am also on: </4h> 
             <a href="https://www.instagram.com/matias_orciani/?hl=es" target="_blank" class="instagram-contact"><p>Instagram</p></a>
             </div>
         </section>
