Retoques en la forma de organizar

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <footer>
         <section class="section-footer">
         <div class="div-footer">
-            <h4 class="footer-contact-text">I am also on: </4h> 
+            <h4 class="footer-contact-text">I am also on </4h> 
             <a href="https://www.instagram.com/matias_orciani/?hl=es" target="_blank" class="instagram-contact"><p>Instagram</p></a>
             </div>
         </section>
